[package]
name = "egui_winit_vulkano"
version = "0.27.0"
authors = ["hakolao <okkohakola@gmail.com>"]
edition = "2021"
description = "Egui immediate mode gui integration with winit and Vulkano"
homepage = "https://github.com/hakolao/egui_winit_vulkano"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/hakolao/egui_winit_vulkano"
categories = ["gui", "game-development"]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]

[features]
default = ["clipboard", "links"]
links = ["egui-winit/links"]
clipboard = ["egui-winit/clipboard"]

[dependencies]
ahash = "0.8"
egui-winit = "0.26"
egui = "0.26"
image = "0.24"
winit = { version = "0.29" }
vulkano = { version = "0.34", git = "https://github.com/vulkano-rs/vulkano.git"}
vulkano-shaders = "0.34"

[dev-dependencies]
cgmath = "0.18.0"
egui_demo_lib = "0.26"
vulkano-util = { version = "0.34", git = "https://github.com/vulkano-rs/vulkano.git"}
